--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 <body>
     <div class="main-container">
         
-        <div class="incorrect-words-box hidden">
+        <div class="incorrect-words-box">
             <h2 class="box-title">Yanlış Yazdıklarım</h2>
             <ul id="incorrect-words-list" class="incorrect-words-list"></ul>
-            <button id="practice-button" class="action-button practice-button">Sadece Bunları Çalış</button>
-            <button id="copy-button" class="action-button copy-button">Tümünü Kopyala</button>
+            <div class="button-container">
+                <button id="practice-button" class="action-button practice-button">Sadece Bunları Çalış</button>
+                <button id="copy-button" class="action-button copy-button">Tümünü Kopyala</button>
+            </div>
             <div id="copy-message" class="copy-message"></div>
         </div>
 
@@ -34,9 +36,8 @@
     <div id="end-session-modal" class="modal-overlay hidden">
         <div class="modal-content">
             <h2>Çalışma Bitti!</h2>
-            <p>Hangi kelimelerle devam etmek istersin?</p>
+            <p>Tüm kelimeleri tamamladın. Yeni bir çalışmaya başlamak ister misin?</p>
             <div class="modal-buttons">
-                <button id="retry-incorrect" class="modal-button">Yanlışları Tekrar Çalış</button>
                 <button id="new-session" class="modal-button">Yeni Çalışma</button>
             </div>
         </div>
